envoy-gateway/templates/echo.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: envoy-gateway-system
  labels:
    app.kubernetes.io/name: envoy-gateway
    app.kubernetes.io/instance: envoy-gateway
    app: echo
    service: echo
spec:
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    app: echo

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  namespace: envoy-gateway-system
  labels:
    app.kubernetes.io/name: envoy-gateway
    app.kubernetes.io/instance: envoy-gateway
    app: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
      version: v1
  template:
    metadata:
      labels:
        app: echo
        version: v1
    spec:
      serviceAccountName: echo
      containers:
      - image: gcr.io/k8s-staging-gateway-api/echo-basic:v20231214-v1.0.0-140-gf544a46e
        imagePullPolicy: IfNotPresent
        name: echo
        ports:
        - containerPort: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo
  namespace: envoy-gateway-system
  labels:
    app.kubernetes.io/name: envoy-gateway
    app.kubernetes.io/instance: envoy-gateway
    app: echo
spec:
  parentRefs:
  - name: envoy-gateway
  hostnames:
  - "echo.jamesclonk.com"
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: echo
      port: 3000
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
