envoy-gateway/templates/gateway.yaml
#@ load("@ytt:data", "data")
#@ load("@ytt:overlay", "overlay")

---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gateway
  namespace: envoy-gateway-system
  labels:
    app.kubernetes.io/name: envoy-gateway
    app.kubernetes.io/instance: envoy-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy-proxy-config
    namespace: envoy-gateway-system

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  namespace: envoy-gateway-system
  labels:
    app.kubernetes.io/name: envoy-gateway
    app.kubernetes.io/instance: envoy-gateway
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  gatewayClassName: envoy-gateway
  addresses:
  - type: IPAddress
    value: 116.203.156.9 # TODO: must be read and injected via shellscript / templating / ytt, cannot be hardcoded!
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
  # - name: echo
  #   protocol: HTTPS
  #   port: 443
  #   hostname: echo.jamesclonk.com
  #   tls:
  #     mode: Terminate
  #     certificateRefs:
  #     - kind: Secret
  #       name: echo-certificate
  #   allowedRoutes:
  #     namespaces:
  #       from: Same
  - name: dex
    protocol: HTTPS
    port: 443
    hostname: dex.jamesclonk.com
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: dex-certificate
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            namespace.kubernetes.io/name: dex
  - name: dashboard
    protocol: HTTPS
    port: 443
    hostname: dashboard.jamesclonk.com
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: headlamp-certificate
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            namespace.kubernetes.io/name: headlamp

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  namespace: envoy-gateway-system
  labels:
    app.kubernetes.io/name: envoy-gateway
    app.kubernetes.io/instance: envoy-gateway
spec:
  parentRefs:
  - name: envoy-gateway
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
