envoy-gateway/templates/network_policy.yaml
#@ load("@ytt:data", "data")

#@ if data.values.gateway.enable_network_policy:
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: envoy-gateway
  namespace: envoy-gateway-system
  labels:
    app.kubernetes.io/name: envoy-gateway
    app.kubernetes.io/instance: envoy-gateway
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: proxy
      app.kubernetes.io/name: envoy
  ingress:
  - {} #! allow all incoming traffic to envoy-gateway
#@ end
